<resources>
    <string name="app_name">Pastebin Android</string>

    <string name="create_paste_title">Create Paste</string>
    <string name="list_paste_title">Your Paste List</string>
    <string name="sign_in_title">Sign In</string>

    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_clicks">Clicks: </string>

    <string name="option_sign_in">Sign in</string>
    <string name="option_log_out">Log out</string>
    <string name="option_about">About</string>

    <string name="create_paste_information">Enter text that you want to save in Pastebin\n\nAfter pressing Create Paste button, you will receive a link that saves your text online!</string>

    <string name="list_paste_information_logged_out">To see your paste list, please log in.</string>
    <string name="paste_item_no_title">No title</string>
</resources>